exploring and adding comments

--- a/preliminary/copy_images_for_dataset.ipynb
+++ b/preliminary/copy_images_for_dataset.ipynb
@@ -62,11 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_orig = r'data\\satellite\\original'\n",
+    "dir_orig = r'data\\satellite\\original' # Mattia's comment: this variable is useless!\n",
     "dir_proc = r'data\\satellite\\preprocessed'"
    ]
   },
