--- a/preliminary/create_dataset_monthly.ipynb
+++ b/preliminary/create_dataset_monthly.ipynb
@@ -83,14 +83,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_orig = r'data\\satellite\\original'\n",
-    "dir_proc = r'data\\satellite\\preprocessed'\n",
-    "dir_dataset = r'data\\satellite\\dataset'\n",
-    "dir_dataset_1024x512 = r'data\\satellite\\dataset_1024x512'\n",
+    "dir_orig = r'data\\satellite\\original' # Mattia's comment: this variable is useless!\n",
+    "dir_proc = r'data\\satellite\\preprocessed' # Mattia's comment: this variable is useless!\n",
+    "dir_dataset = r'data\\satellite\\dataset' # Mattia's comment: this variable is useless!\n",
+    "dir_dataset_1024x512 = r'data\\satellite\\dataset_1024x512' # Mattia's comment: this variable is useless!\n",
     "dir_dataset_jan = r'data\\satellite\\dataset_month1' \n",
     "dir_dataset_feb = r'data\\satellite\\dataset_month2'\n",
     "dir_dataset_mar = r'data\\satellite\\dataset_month3'\n",
@@ -106,11 +106,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "JRC = r'JRC_GSW1_4_MonthlyHistory'"
+    "JRC = r'JRC_GSW1_4_MonthlyHistory' # Mattia's comment: this variable is useless!"
    ]
   },
   {
