--- a/preliminary/create_dataset_seasons.ipynb
+++ b/preliminary/create_dataset_seasons.ipynb
@@ -83,13 +83,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_orig = r'data\\satellite\\original'\n",
-    "dir_proc = r'data\\satellite\\preprocessed'\n",
-    "dir_dataset = r'data\\satellite\\dataset'"
+    "dir_orig = r'data\\satellite\\original' # Mattia's comment: this variable is useless!\n",
+    "dir_proc = r'data\\satellite\\preprocessed' # Mattia's comment: this variable is useless!\n",
+    "dir_dataset = r'data\\satellite\\dataset' # Mattia's comment: this variable is almost useless!"
    ]
   },
   {
@@ -101,13 +101,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "L5 = r'LANDSAT_LT05_C02_T1_L2'\n",
-    "JRC = r'JRC_GSW1_4_MonthlyHistory'\n",
-    "S1 = r'COPERNICUS_S1_GRD'"
+    "L5 = r'LANDSAT_LT05_C02_T1_L2' # Mattia's comment: this variable is useless!\n",
+    "JRC = r'JRC_GSW1_4_MonthlyHistory' # Mattia's comment: this variable is useless!\n",
+    "S1 = r'COPERNICUS_S1_GRD' # Mattia's comment: this variable is useless!"
    ]
   },
   {
