--- a/preliminary/create_dataset_temporal.ipynb
+++ b/preliminary/create_dataset_temporal.ipynb
@@ -83,12 +83,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "dir_jan = r'data\\satellite\\dataset_month1'\n",
-    "dir_feb = r'data\\satellite\\dataset_month2'\n",
+    "dir_feb = r'data\\satellite\\dataset_month2' # Mattia's comment: only this is used at the moment\n",
     "dir_mar = r'data\\satellite\\dataset_month3'\n",
     "dir_apr = r'data\\satellite\\dataset_month4'"
    ]
