--- a/preliminary/edit_satellite_img.ipynb
+++ b/preliminary/edit_satellite_img.ipynb
@@ -97,13 +97,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "L5 = r'LANDSAT_LT05_C02_T1_L2'\n",
+    "L5 = r'LANDSAT_LT05_C02_T1_L2' # Mattia's comment: useless variable\n",
     "JRC = r'JRC_GSW1_4_MonthlyHistory'\n",
-    "S1 = r'COPERNICUS_S1_GRD'"
+    "S1 = r'COPERNICUS_S1_GRD' # Mattia's comment: useless variable"
    ]
   },
   {
