--- a/preliminary/satellite_collections.ipynb
+++ b/preliminary/satellite_collections.ipynb
@@ -33,13 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import modules \n",
     "\n",
-    "from preprocessing.satellite_analysis_pre import *\n",
+    "from preprocessing.satellite_analysis_pre import * # Mattia's comment: useless\n",
     "from postprocessing.satellite_analysis_post import *\n",
     "\n",
     "%matplotlib inline"
@@ -57,12 +57,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# set files directory\n",
-    "dir_files = r'data\\satellite\\original' "
+    "dir_files = r'data\\satellite\\original' # Mattia's comment: useless"
    ]
   },
   {
